hdparm-7.4
	- ignore ENOTTY response from DRIVE_CMD(NULL)
	- decode CFA advanced timing information
hdparm-7.3
	- fixed spelling of --drq-hsm-error in -h output
	- fixed SG_IO CDB[2] bits for better SAT compliance
	- fixed version number (v7.2 has "7.1" as version, doh!)
	- added #ifdef around use of BLKGETSIZE64
	- manpage updated
	- flush_cache before/after -W0 action
	- use O_RDWR instead of O_RDONLY for better SG_IO compatibility
hdparm-7.2
	- tweak -C
	- added more debug info from --verbose
	- added --drq-hsm-error to test libata EH (VERY DANGEROUS, do not use)
	- fixed breakage when used with old IDE driver
hdparm-7.1
	- big-endian fixes for -I, --Istdin, --Istdout
	- cody tidying in sgio.c
	- updated help/manpage for -v
	- marked -s1 as (DANGEROUS)
hdparm-7.0
	- new command-line parser
	- allow any chars (except 0x00) in security passwords
	- fixed -s manpage format error
	- updated -W manpage description
	- major internal rework in hdparm.c
	- added SET_FEATURES subcommand 0x07 to the -s0 sequence
	   (the kernel will eventually have to do this automatically)
	- fixed duplicate display of udma modes 3,4,5 with -i
	- added Timed-Command-Completion (TLC) data for -I
	- added support for SG_IO (SAT) ATA_16 command transport
	- ignore case for longargs (eg. --istdout or --Istdout)
	- remove dependencies on <linux/hdreg.h>
	- added query wcache (-W)
	- enhanced query acoustic (-M)
	- added kernel_patches directory with patches for ATAPI support
hdparm-6.9
	- added -s flag to control power-up in standby
	  (thanks to chrfranke)
	- make --Istdin more robust
	- added -I recognition of SMART Command Transport (SCT)
	   (thanks to chrfranke).
	- fix X2 over-reporting of -T results
	- add udma 3/4/5 modes to the -i results
hdparm-6.8
	- improve parsing/operation of --Istdin function
hdparm-6.7
	- don't default to "-v" when only new "--" longopts are used.
	- calculate integrity word if not correct
	- remove used code/parameter from identify()