@@ -1,3 +1,5 @@
+hdparm-7.5
+	- beef up warnings for -s1 flag, as people seem to be ignoring them
 hdparm-7.4
 	- ignore ENOTTY response from DRIVE_CMD(NULL)
 	- decode CFA advanced timing information
